renderer bleed fix

--- a/app/styles/cards.scss
+++ b/app/styles/cards.scss
@@ -99,51 +99,3 @@
     }
   }
 }
-
-body.singlePage {
-
-  $bleed: 0.125in; /* background art should extend to here */
-  $card-height: 3.5in + 2 * $bleed;
-  $card-width: 2.5in + 2 * $bleed;
-
-  .printInstructions {
-    display: none !important;
-  }
-
-  .page {
-    width: $card-width !important;
-    height: $card-height !important;
-  }
-
-  .card {
-
-    width: $card-width !important;
-    height: $card-height !important;
-    padding: 0 !important;
-    /*border: 2 * $bleed solid black;*/
-    /* ONLY FOR TAKING SCREENSHOTS */
-    /*border-radius: $bleed;*/
-
-    &.front, &.back {
-
-      &:before {
-        top: 0 !important;
-        left: 0 !important;
-      }
-    }
-
-    .contents {
-      top: $bleed !important;
-      left: $bleed !important;
-    }
-
-    &.front.horizontal {
-
-      .contents {
-        height: 2.25in !important;
-        width: 3.25in !important;
-        margin: 0 !important;
-      }
-    }
-  }
-}
