--- a/app/themes/UrbanChaos/cards.scss
+++ b/app/themes/UrbanChaos/cards.scss
@@ -6,6 +6,8 @@ $icon-width: 0.2in;
 
 $font-header: 'Comfortaa', sans-serif !important;
 $font-body: 'minion-pro', serif !important;
+$large-icon: 0.5in;
+$edge: 0.115in; /* .125 on Expedition */
 $padding: 12pt;
 $top-padding: 0.19in;
 $small: 4pt;
@@ -30,7 +32,6 @@ $color-blue: #0D47A1; /* blue900 */
   /* ===== THE CARDS ===== */
 
   .card {
-
     border: $border solid black;
     border-radius: $border * 2;
     font-family: $font-body;
@@ -43,7 +44,6 @@ $color-blue: #0D47A1; /* blue900 */
     }
 
     header {
-
       position: relative;
       margin: $top-padding $edge 0 $edge;
 
@@ -54,10 +54,19 @@ $color-blue: #0D47A1; /* blue900 */
         letter-spacing: -0.5pt;
         line-height: 1.15;
       }
+
+      .costs {
+        font-weight: bold;
+        .save {
+          color: $color-green;
+        }
+        .spend {
+          color: $color-red;
+        }
+      }
     }
 
     article {
-
       position: relative;
       clear: left;
       margin: 0 $edge $edge $edge;
@@ -73,29 +82,47 @@ $color-blue: #0D47A1; /* blue900 */
         }
       }
 
-      .costs {
-        font-weight: bold;
-
-        .save {
-          color: $color-green;
-        }
-
-        .spend {
-          color: $color-red;
-        }
-      }
-
       .effects {
         margin-top: $small;
+      }
+
+      .score {
+        text-align: center;
+        font-size: 0.8 * $large-icon;
+        svg {
+          height: $large-icon;
+          width: $large-icon;
+          padding: $padding $small 0 $small;
+        }
+        .scorePlus, .scoreMinus {
+          position: relative;
+          &:before {
+            position: absolute;
+            top: 0.2in;
+            left: 0.5in;
+          }
+        }
+        .scorePlus.two:before {
+          content: "2x";
+          left: 0.25in;
+        }
+        .scoreMinus:before {
+          content: "-";
+          color: $color-red;
+        }
+        .scoreMinus svg {
+          stroke: $color-red;
+          fill: $color-red;
+        }
       }
     }
 
     footer {
-
       position: absolute;
       left: $edge; bottom: $border; right: $edge;
-      height: $footer-height;
+      height: auto;
       text-align: left;
+      line-height: 1.15;
 
       .flavortext {
         font-style: italic;
@@ -107,7 +134,13 @@ $color-blue: #0D47A1; /* blue900 */
       }
     }
 
-    &.Proposal {
+    &.Citizen {
+      .score {
+        margin-top: $padding;
+      }
+    }
+
+    &.Policy {
       &.Infrastructure {
         border-color: $color-red;
       }
@@ -116,6 +149,50 @@ $color-blue: #0D47A1; /* blue900 */
       }
       &.Finance {
         border-color: $color-green;
+      }
+      .advocates {
+        position: absolute;
+        bottom: $border;
+        height: 0.5in + $footer-height;
+        left: $edge;
+        right: $edge;
+        font-size: $text-size-small;
+
+        .for {
+          height: 100%;
+          width: calc(50% - 1px);
+          border-right: 2px solid #ccc;
+          color: $color-green;
+          display: inline-block;
+        }
+        .against {
+          width: calc(50% - 1px);
+          display: inline-block;
+          color: $color-red;
+          text-align: right;
+        }
+      }
+
+      footer {
+        background-color: white;
+        padding-top: $small;
+      }
+    }
+
+    &.Reference article {
+      text-align: left;
+      margin-top: $edge;
+      font-size: $text-size-content;
+
+      h3 {
+        font-size: $text-size-front-title;
+        font-family: $font-header;
+        font-weight: bold;
+        margin-top: $tiny;
+      }
+      ul {
+        margin-bottom: $text-size-small;
+        margin-left: $text-size-content;
       }
     }
   }
@@ -144,14 +221,12 @@ $color-blue: #0D47A1; /* blue900 */
   /* ===== BACKGROUNDS ===== */
 
   .card.front, .card.back {
-
     &:before {
       content: "";
       position: absolute;
       top: 1.125in; left: .625in;
       width: 1in;
       height: 1in;
-
       background: no-repeat center center;
       background-size: 1in 1in;
     }
